k8s/infra/network/gateway/envs/dev/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.3.83
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.dev.iseja.net"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: dev.iseja.net
      tls:
        certificateRefs:
          - kind: Secret
            name: cert
      allowedRoutes:
        namespaces:
          from: All
