k8s/infra/network/gateway/envs/dev/gw-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.3.82
  listeners:
    - protocol: TLS
      port: 443
      name: unifi
      hostname: "dev-unifi.dev.iseja.net"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
